--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     <div class="container">
         <div class="imagem-perfil">
             <img src="img/Ellipse.svg" alt="perfil">
+            <h2 class="nickname">burak#0666</h2>
+            <h6 class="badges">Bot Badges </h6>
+            <div class="rectangle10">
+                <img src="img/Rectangle 10.svg" alt="rectangle2">
+            </div>
         </div>
+        
        
     </div>
 
